2008-03-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Removed debug message.

2008-03-01  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Fixed syntax
	  highlighting bug

2008-03-01  Mike Krüger <mkrueger@novell.com> 

	* CSharpSyntaxMode.xml, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/Match.cs: Added support for regular
	  expressions (syntax highlighting).

2008-03-01  Mike Krüger <mkrueger@novell.com> 

	* PythonSyntaxMode.xml, Mono.TextEditor.Highlighting/SyntaxMode.cs: fixed
	  """, ''' pydocs

2008-03-01  Mike Krüger <mkrueger@novell.com> 

	* PythonSyntaxMode.xml: Added python syntax highlighting.

2008-02-29  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>
 
 	* CPPSyntaxMode.xml, CSyntaxMode.xml: Added headers to highlighted mime
 	types.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs: Freed up some
	  resources.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/FoldMarkerMargin.cs, Mono.TextEditor/BookmarkMargin.cs:
	  Fixed zooming bug.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs, Mono.TextEditor/TextEditorOptions.cs: Added
	  zoom commands to main menu.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Added a function.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/Document.cs, Mono.TextEditor/TextUtil.cs,
	  Mono.TextEditor/TextEditorData.cs: Moved TextUtil functions into
	  Document.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/WorkerThread.cs: Abstracted safe threading
	  in a reuseable workerthread class.
